[package]
name = "kill-probe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
kill-probe-common = { path = "../kill-probe-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal","sync"] }
bytes = "1.0"
uzers = "0.11.3"
flexi_logger = { version = "0.27", features = ["colors", "compress", ] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
serde_json = "1"
[[bin]]
name = "kill-probe"
path = "src/main.rs"
